--- a/app/src/main/res/layout/activity_homescreen.xml
+++ b/app/src/main/res/layout/activity_homescreen.xml
@@ -6,25 +6,51 @@
     android:background="@color/background"
     tools:context=".HomescreenActivity">
 
-    <LinearLayout
+
+    <!-- Card view -->
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:background="@color/background_light"
-        android:layout_gravity="center_vertical">
+        android:layout_gravity="center_vertical"
+        android:background="@color/cardview_dark_background"
+        android:layout_margin="32dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@color/cardview_dark_background">
 
 
-    </LinearLayout>
+            <!--How to search information text-->
+            <TextView
+                android:id="@+id/text_homescreen_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@string/hs_info"
+                android:textColor="@color/color_text_dark"
+                android:textSize="@dimen/text_size_1"
+                android:gravity="center_horizontal"
+                android:layout_gravity="center"
+                android:fontFamily="@font/font_havamana_def" />
 
 
-    <!--How to search information text-->
-    <TextView
-        android:id="@+id/text_homescreen_info"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hs_info"
-        android:textColor="#33b5e5"
-        android:textSize="@dimen/text_size_1"
-        android:fontFamily="@font/font_havamana_def"
-        />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/hs_search_placeholder"
+                android:padding="32dp"
+                android:layout_marginTop="8dp"
+                android:inputType="text"
+                android:id="@+id/et_homescreen_city"
+                android:textColor="@color/color_text_dark"
+                android:textColorHint="@color/color_text_light"
+                android:gravity="center"
+                android:fontFamily="@font/font_havamana_def"
+                android:imeOptions="actionSearch" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
