--- a/app/src/main/res/layout/activity_homescreen.xml
+++ b/app/src/main/res/layout/activity_homescreen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -36,19 +37,20 @@
                 android:fontFamily="@font/font_havamana_def" />
 
 
-            <EditText
+
+            <androidx.appcompat.widget.SearchView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hs_search_placeholder"
-                android:padding="32dp"
-                android:layout_marginTop="8dp"
-                android:inputType="text"
-                android:id="@+id/et_homescreen_city"
-                android:textColor="@color/color_text_dark"
-                android:textColorHint="@color/color_text_light"
+                app:queryHint="@string/hs_search_placeholder"
+                app:iconifiedByDefault="false"
                 android:gravity="center"
-                android:fontFamily="@font/font_havamana_def"
-                android:imeOptions="actionSearch" />
+                android:imeOptions="actionSearch"
+                android:layout_marginTop="8dp"
+                android:padding="4dp"
+                android:inputType="textAutoComplete"
+                android:id="@+id/et_homescreen_city">
+
+            </androidx.appcompat.widget.SearchView>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
