--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,10 @@
         <item name="android:textColorHint">@color/color_text_light</item>
         <item name="android:textColor">@color/color_text_dark</item>
         <item name="android:fontFamily"> @font/font_havamana_def</item>
+        <item name="android:editTextColor">@color/color_text_dark</item>
+        <item name="android:textColorPrimary">@color/color_text_dark</item>
+        <item name="android:textColorSecondary">@color/color_text_light</item>
+
     </style>
 
 
